adjust divider height to fixed and increased advice id letter spacing

--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,7 @@ main{
     color:hsl(150, 100%, 66%);
     font-size: 10px;
     text-align: center;
+    letter-spacing: 2px;
     
     }
 
@@ -82,6 +83,8 @@ main{
     background-size: contain;
     width: 250px;
     height: 30px;
+    padding-top: 330px;
+    position: fixed;
 
 }
 
